--- a/src/index.css
+++ b/src/index.css
@@ -89,14 +89,9 @@ box-shadow:
   0 4px 6px rgba(0, 0, 0, 0.3),
   0 12px 24px rgba(0, 0, 0, 0.4);
 
-
-
-
-
-
-
-
-
 }
-
+.course-content{
+  position: sticky;
+  top: 3px;
+}
 
