--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@
   animation: gradientMove 10s ease infinite;
 
 }
+
+
+@keyframes gradientMove {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
  .box{
   background: radial-gradient(circle at center, #364c84, #728ccd); 
  }
