--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,7 @@
 .embla__slide , .cards {
   flex: 0 0 25%;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-  background: linear-gradient(to right, #fda4af, #ffb6b9, #ffe0e9);
+  background-color: #dbeafe;
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.2);
 
 }
